--- a/bookers/app/views/homes/top.html.erb
+++ b/bookers/app/views/homes/top.html.erb
@@ -1,4 +1,7 @@
-<h1>ようこそ Bookers へ！</h1>
-  <p>Bookersでは、さまざまな書籍に関するあなたの意見や</p>
-  <p>印象を共有し交換することができます</p>
-  <p>start</p>
+
+    <h1>ようこそ <strong>Bookers</strong> へ！</h1>
+      <p><storong>Bookers</storong>では、さまざまな書籍に関するあなたの意見や</p>
+      <p>印象を共有し交換することができます</p>
+      <p>
+        <%= link_to 'start' , "/books" %>
+      </p>
