--- a/bookers/app/views/books/index.html.erb
+++ b/bookers/app/views/books/index.html.erb
@@ -8,9 +8,15 @@
       </tr>
     </thead>
     <tbody>
+      <% @books.each do |book| %>
       <tr>
-        <td></td>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td><%= link_to 'Show', "/show" %></td>
+        <td><%= link_to 'Edit', "/edit" %></td>
+        <td><%= link_to 'Destroy', "/destroy" %></td>
       </tr>
+      <% end %>
     </tbody>
   </table>
   <h2>New book</h2>
