--- a/bookers/app/views/books/index.html.erb
+++ b/bookers/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
       <tr>
         <td><%= book.title %></td>
         <td><%= book.body %></td>
-        <td><%= link_to 'Show', "/show" %></td>
+        <td><%= link_to 'Show', book_path(book.id) %></td>
         <td><%= link_to 'Edit', "/edit" %></td>
         <td><%= link_to 'Destroy', "/destroy" %></td>
       </tr>
