--- a/bookers/app/views/books/index.html.erb
+++ b/bookers/app/views/books/index.html.erb
@@ -13,7 +13,7 @@
         <td><%= book.title %></td>
         <td><%= book.body %></td>
         <td><%= link_to 'Show', book_path(book.id) %></td>
-        <td><%= link_to 'Edit', "/edit" %></td>
+        <td><%= link_to 'Edit', edit_book_path(book.id) %></td>
         <td><%= link_to 'Destroy', "/destroy" %></td>
       </tr>
       <% end %>
