--- a/bookers/app/views/books/show.html.erb
+++ b/bookers/app/views/books/show.html.erb
@@ -1,5 +1,5 @@
 <p><strong>Title:<%= @book.title %></strong></p>
 <p><strong>Body:<%= @book.body %></strong></p>
 
-<%= link_to 'Edit', "/edit" %>
+<%= link_to 'Edit', edit_book_path(@book) %>
 <%= link_to 'Back', "/books" %>
