--- a/bookers/app/views/books/edit.html.erb
+++ b/bookers/app/views/books/edit.html.erb
@@ -5,7 +5,7 @@
   <h3>Body</h3>
   <%= f.text_area :body %>
 
-  <%= f.submit 'Update Book' %>
+  <p><%= f.submit 'Update Book' %></p>
   <% end %>
 
   <%= link_to 'Show', book_path(@book) %>
