--- a/bookers/app/views/books/index.html.erb
+++ b/bookers/app/views/books/index.html.erb
@@ -20,6 +20,12 @@
     </tbody>
   </table>
   <h2>New book</h2>
+  <% if @book.errors.any? %>
+    <%= @book.errors.full_messages.each do |message| %>
+      <%= message %>
+    <% end %>
+  <% end %>
+
   <%= form_with model:@book, local:true do |f| %>
   <h3>Title</h3>
   <%= f.text_field :title %>
