--- a/bookers/app/views/books/edit.html.erb
+++ b/bookers/app/views/books/edit.html.erb
@@ -1,4 +1,9 @@
 <h1>Editing Book</h1>
+<% if @book.errors.any? %>
+    <%= @book.errors.full_messages.each do |message| %>
+      <%= message %>
+    <% end %>
+  <% end %>
 <%= form_with model:@book, local:true do |f| %>
   <h3>Title</h3>
   <%= f.text_field :title %>
