--- a/bookers/app/views/books/index.html.erb
+++ b/bookers/app/views/books/index.html.erb
@@ -19,12 +19,13 @@
       <% end %>
     </tbody>
   </table>
+  
   <h2>New book</h2>
-  <% if @book.errors.any? %>
-    <%= @book.errors.full_messages.each do |message| %>
-      <%= message %>
+    <% if @book.errors.any? %>
+      <%= @book.errors.full_messages.each do |message| %>
+        <%= message %>
+      <% end %>
     <% end %>
-  <% end %>
 
   <%= form_with model:@book, local:true do |f| %>
   <h3>Title</h3>
@@ -32,5 +33,5 @@
   <h3>Body</h3>
   <%= f.text_area :body %>
 
-  <%= f.submit 'Create Book' %>
+  <p><%= f.submit 'Create Book' %></p>
   <% end %>
