--- a/bookers/app/views/books/edit.html.erb
+++ b/bookers/app/views/books/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Editing Book</h1>
   <% if @book.errors.any? %>
-    <%= @book.errors.full_messages.each do |message| %>
+    <%= @book.errors.count %>errors prohibited this book from being saved:<br>
+    <% @book.errors.full_messages.each do |message| %>
       <%= message %>
     <% end %>
   <% end %>
@@ -12,6 +13,6 @@
 
   <p><%= f.submit 'Update Book' %></p>
 <% end %>
-  
+
   <%= link_to 'Show', book_path(@book) %>
 　<%= link_to 'Back', "/books" %>
