--- a/bookers/app/views/books/index.html.erb
+++ b/bookers/app/views/books/index.html.erb
@@ -19,10 +19,11 @@
       <% end %>
     </tbody>
   </table>
-  
+
   <h2>New book</h2>
     <% if @book.errors.any? %>
-      <%= @book.errors.full_messages.each do |message| %>
+    <%= @book.errors.count %>errors prohibited this book from being saved:<br>
+      <% @book.errors.full_messages.each do |message| %>
         <%= message %>
       <% end %>
     <% end %>
